<resources>
    <string name="app_name">CeraviProject</string>
    <string name="title_activity_estadisticas">Estadisticas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_moldeado">Moldeado</string>
    <string name="title_activity_arcilla">Arcilla</string>
    <string name="title_activity_cargue">Cargue</string>
    <string name="title_activity_quemado">Quemado</string>
    <string name="title_activity_descargue">Descargue</string>
    <string name="descargue">Descargue</string>
    <string name="quemado">Quemado</string>
    <string name="cargue">Cargue</string>
    <string name="recepci_n_de_arcilla">Recepción de Arcilla</string>
    <string name="moldeado">Moldeado</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="ceravi">CERAVI</string>
    <string name="ceramica_viacha">Ceramica Viacha</string>
    <string name="title_menucliente_list">MenuClientes</string>
    <string name="title_menucliente_detail">MenuCliente Detail</string>
    <string name="title_agregarcliente_list">AgregarClientes</string>
    <string name="title_agregarcliente_detail">AgregarCliente Detail</string>
    <string name="clienteList_dialog_title">mi codigo</string>
    <string name="comidaList_dialog_ok">OK</string>
    <string name="clientes">Clientes</string>
    <string name="obreros">Obreros</string>
    <string name="transportistas_de_arcilla">Transportistas de arcilla</string>
    <string name="transportistas_de_ladrillo">Transportistas de ladrillo</string>
    <string name="title_menuobrero_list">MenuObreros</string>
    <string name="title_menuobrero_detail">MenuObrero Detail</string>
    <string name="borrar">Borrar</string>
    <string name="title_agregarobrero_list">AgregarObreros</string>
    <string name="title_agregarobrero_detail">AgregarObrero Detail</string>
    <string name="title_agregartransportistadearcilla_list">AgregarTransportistasDeArcilla</string>
    <string name="title_agregartransportistadearcilla_detail">AgregarTransportistaDeArcilla Detail
    </string>
    <string name="title_menutransportistadearcilla_list">MenuTransportistasDeArcilla</string>
    <string name="title_menutransportistadearcilla_detail">MenuTransportistaDeArcilla Detail
    </string>
    <string name="title_menutransportistadeladrillo_list">MenuTransportistasDeLadrillo</string>
    <string name="title_menutransportistadeladrillo_detail">MenuTransportistaDeLadrillo Detail
    </string>
    <string name="title_agregartransportistadeladrillo_list">ItemsAgregarTransportistasDeLadrillo
    </string>
    <string name="title_agregartransportistadeladrillo_detail">AgregarTransportistaDeLadrillo
        Detail
    </string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="eliminar">Eliminar</string>
</resources>
