<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/estadisticas"
            android:icon="@drawable/baseline_equalizer_black_18dp"
            android:title="@string/estadisticas" />
        <item
            android:id="@+id/arcilla"
            android:icon="@drawable/baseline_filter_hdr_black_18dp"
            android:title="@string/recepci_n_de_arcilla" />
        <item
            android:id="@+id/moldeado"
            android:icon="@drawable/baseline_business_black_18dp"
            android:title="@string/moldeado" />
        <item
            android:id="@+id/cargue"
            android:icon="@drawable/baseline_rv_hookup_black_18dp"
            android:title="@string/cargue" />
        <item
            android:id="@+id/quemado"
            android:icon="@drawable/baseline_waves_black_18dp"
            android:title="@string/quemado" />
        <item
            android:id="@+id/descargue"
            android:icon="@drawable/baseline_rv_hookup_black_18dp"
            android:title="@string/descargue" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/view_cliente"
                android:icon="@drawable/baseline_perm_identity_black_18dp"
                android:title="@string/clientes" />
            <item
                android:id="@+id/view_obreros"
                android:icon="@drawable/baseline_transfer_within_a_station_black_18dp"
                android:title="@string/obreros" />
            <item
                android:id="@+id/view_tArcilla"
                android:icon="@drawable/baseline_local_shipping_black_18dp"
                android:title="@string/transportistas_de_arcilla" />
            <item
                android:id="@+id/view_tLadrillo"
                android:icon="@drawable/baseline_local_shipping_black_18dp"
                android:title="@string/transportistas_de_ladrillo" />
        </menu>
    </item>
</menu>
