<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/estadisticas"
            android:icon="@drawable/baseline_equalizer_black_18dp"
            android:title="@string/estadisticas" />
        <item
            android:id="@+id/arcilla"
            android:icon="@drawable/baseline_filter_hdr_black_18dp"
            android:title="@string/recepci_n_de_arcilla" />
        <item
            android:id="@+id/moldeado"
            android:icon="@drawable/baseline_business_black_18dp"
            android:title="@string/moldeado" />
        <item
            android:id="@+id/cargue"
            android:icon="@drawable/baseline_rv_hookup_black_18dp"
            android:title="@string/cargue" />
        <item
            android:id="@+id/quemado"
            android:icon="@drawable/baseline_waves_black_18dp"
            android:title="@string/quemado" />
        <item
            android:id="@+id/descargue"
            android:icon="@drawable/baseline_rv_hookup_black_18dp"
            android:title="@string/descargue" />    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
